@@ -24,20 +24,13 @@ public class ComboBoxCustom<T> extends ComboBox<T> {
     private FilteredList<T> filteredItems;
     private boolean isCommitting = false;
     private boolean isNavigating = false;
-    private String textNull = "";
+
     public ComboBoxCustom() {
         setEditable(true);
         setupEventHandlers();
     }
 
     public void setItemsAndDisplay(ObservableList<T> items, List<Function<T, String>> functions) {
-        this.displayFunctions = functions != null ? functions : List.of();
-        this.filteredItems = new FilteredList<>(items != null ? items : FXCollections.observableArrayList());
-        setItems(filteredItems);
-        setupConverter();
-    }
-    public void setItemsAndDisplay(ObservableList<T> items, List<Function<T, String>> functions,String textoNull) {
-        this.textNull=textoNull;
         this.displayFunctions = functions != null ? functions : List.of();
         this.filteredItems = new FilteredList<>(items != null ? items : FXCollections.observableArrayList());
         setItems(filteredItems);
@@ -202,7 +195,7 @@ public class ComboBoxCustom<T> extends ComboBox<T> {
         T selectedItem = getSelectedItemFromListView();
 
         if (selectedItem == null && !filteredItems.isEmpty()) {
-            selectedItem = filteredItems.get(0);
+            selectedItem = filteredItems.getFirst();
         }
 
         if (selectedItem != null) {
@@ -250,7 +243,7 @@ public class ComboBoxCustom<T> extends ComboBox<T> {
     }
 
     private void setupConverter() {
-        setConverter(new StringConverter<T>() {
+        setConverter(new StringConverter<>() {
             @Override
             public String toString(T item) {
                 return buildDisplayText(item);
@@ -293,10 +286,7 @@ public class ComboBoxCustom<T> extends ComboBox<T> {
 
     private String buildDisplayText(T item) {
         if (item == null) {
-            if (textNull == null){
-                return "";
-            }
-            return textNull;
+            return "";
         }
 
         return displayFunctions.stream()
